# python_for_testers

./: Application.py  README.md  group.py  pyproject.toml  test_add_new_contact.py  test_add_new_contact_fixtured.py  test_group_add.py  users_data.py
fixture/: Application.py  Application_group.py  application.py  contacts.py  groups.py  session.py
model/: users_data.py
tests/: test_add_new_contact.py  test_add_new_contact_fixtured.py  test_contact_add.py  test_contact_del_first.py  test_contact_edit_first.py  test_group_add.py  test_group_add_fixtured.py  test_group_del_first.py  test_group_edit_first.py
