[tool.poetry]
name = "python-for-testers"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "python_for_testers"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.8.3"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
